DuPont DevSB/src/objects/Remediation_Metadata_Dependency__c.object
<CustomObject>
    <fields>
        <fullName>ANT_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ANT Log</label>
        <referenceTo>ANT_Log__c</referenceTo>
        <relationshipLabel>Remediation Metadata Dependencies</relationshipLabel>
        <relationshipName>Remediation_Metadata_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgCo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgCo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DSS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependent_Metadata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Metadata</label>
        <referenceTo>OneDuPontMetaData__c</referenceTo>
        <relationshipLabel>Remediation Metadata Dependencies (Dependent Metadata)</relationshipLabel>
        <relationshipName>Remediation_Dependent_Metadata_Depend</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E&amp;C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FF_Dependent_Metadata_Name__c</fullName>
        <formula>Dependent_Metadata__r.MetaDataName__c</formula>
        <label>Dependent Metadata Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MatCo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MatCo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MetaData__c</fullName>
        <label>MetaData</label>
        <referenceTo>OneDuPontMetaData__c</referenceTo>
        <relationshipLabel>Remediation Metadata Dependencies</relationshipLabel>
        <relationshipName>Remediation_Metadata_Dependencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N&amp;H</label>
        <type>Checkbox</type>
    </fields>
    <label>Remediation Metadata Dependency</label>
    <nameField>
        <displayFormat>RMD-{000000}</displayFormat>
        <label>Remediation Metadata Dependency Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remediation Metadata Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>